<resources>
    <!-- Translation is not needed -->
    
    <string name="app_name">Filatti</string>
    <string name="server_client_id">903095340388-56ct10133qudlvd09gahqfu7pam1ce6l.apps.googleusercontent.com</string>

    <!-- Translation is needed -->

    <!-- Adjustments -->
    
    <string name="contrast">Contrast</string>
    <string name="sharpen">Sharpen</string>
    <string name="curves">Curves</string>
    <string name="white_balance">White Balance</string>
    <string name="vibrance">Vibrance</string>
    <string name="exposure">Exposure</string>
    <string name="grayscale">Grayscale</string>

    <string name="hls">HLS</string>
    <string name="hls_hue">Hue</string>
    <string name="hls_lightness">Lightness</string>
    <string name="hls_saturation">Saturation</string>

    <string name="vignette">Vignette</string>
    <string name="vignette_strength_title">Strength</string>
    <string name="vignette_feathering_title">Feathering</string>
    <string name="vignette_radius_title">Radius</string>
    <string name="vignette_color_title">Color</string>

    <string name="temperature">Temperature</string>
    <string name="temperature_temperature_title">Temperature</string>
    <string name="temperature_strength_title">Strength</string>

    <string name="tilt_shift">Tilt Shift</string>
    <string name="tilt_shift_strength_title">Strength</string>
    <string name="tilt_shift_feathering_title">Feathering</string>
    <string name="tilt_shift_radius_title">Radius</string>
    <string name="tilt_shift_angle_title">Angle</string>

    <string name="color_balance">Color Balance</string>
    <string name="color_balance_red">Red</string>
    <string name="color_balance_cyan">Cyan</string>
    <string name="color_balance_green">Green</string>
    <string name="color_balance_magenta">Magenta</string>
    <string name="color_balance_blue">Blue</string>
    <string name="color_balance_yellow">Yellow</string>
    <string name="color_balance_shadows">Shadows</string>
    <string name="color_balance_midtones">Midtones</string>
    <string name="color_balance_highlight">Highlights</string>

    <string name="highlight_shadow">Highlight/Shadow</string>
    <string name="highlight_shadow_highlight_amount">Highlight Amount</string>
    <string name="highlight_shadow_highlight_tone_width">Highlight Tone Width</string>
    <string name="highlight_shadow_shadow_amount">Shadow Amount</string>
    <string name="highlight_shadow_shadow_tone_width">Shadow Tone Width</string>

    <!-- Share filter -->

    <string name="share_filter_name">Filter Name:</string>
    <string name="share_filter_category">Filter Category:</string>
    <string name="share_filter_public">Public:</string>
</resources>
