<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/slider_margin_start"
            android:text="@string/hls_hue"/>

        <include
            android:id="@+id/hueTextSlider"
            layout="@layout/text_slider_layout"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/slider_margin_start"
            android:text="@string/hls_lightness"/>

        <include
            android:id="@+id/lightnessTextSlider"
            layout="@layout/text_slider_layout"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/slider_margin_start"
            android:text="@string/hls_saturation"/>

        <include
            android:id="@+id/saturationTextSlider"
            layout="@layout/text_slider_layout"/>

    </LinearLayout>

</RelativeLayout>
