<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/slider_margin_start"
            android:text="@string/tilt_shift_strength_title"/>

        <include
            android:id="@+id/strengthTextSlider"
            layout="@layout/text_slider_layout"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/slider_margin_start"
            android:text="@string/tilt_shift_feathering_title"/>

        <include
            android:id="@+id/featheringTextSlider"
            layout="@layout/text_slider_layout"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/tilt_shift_radius_title"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/radiusTextView"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/tilt_shift_angle_title"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/angleTextView"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"/>

            <ImageButton
                android:id="@+id/circleButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="#0000FF"
                android:layout_gravity="center_vertical"/>

            <ImageButton
                android:id="@+id/ellipseButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="#00FF00"
                android:layout_gravity="center_vertical"/>

            <ImageButton
                android:id="@+id/linearButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="#FF0000"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
