<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="@dimen/header_margin_end"
        android:layout_marginStart="@dimen/header_margin_start"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="@dimen/header_height"
            android:layout_height="@dimen/header_height"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="?android:attr/colorBackground"
            android:paddingEnd="@dimen/header_icon_padding"
            android:paddingStart="@dimen/header_icon_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/back"
            tools:ignore="ContentDescription"/>

        <ImageButton
            android:id="@+id/finishButton"
            android:layout_width="@dimen/header_height"
            android:layout_height="@dimen/header_height"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?android:attr/colorBackground"
            android:paddingEnd="@dimen/header_icon_padding"
            android:paddingStart="@dimen/header_icon_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/ok"
            tools:ignore="ContentDescription"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/shareButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Facebook"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Twitter"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Instagram"/>

        </LinearLayout>

        <Button
            android:id="@+id/shareFilterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Share your filter"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share_filter_name"/>

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text"
                    android:text="Name"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share_filter_category"/>

                <EditText
                    android:id="@+id/categoryEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text"
                    android:text="Category"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share_filter_public"/>

                <CheckBox
                    android:id="@+id/publicCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"/>

            </TableRow>

        </TableLayout>

        <RelativeLayout
            android:id="@+id/imageContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="ContentDescription"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>